syntax = "proto3";

package order;
option go_package = "./generated";

service OrderService {
    rpc CreateOrder (OrderRequest) returns (OrderResponse) {}
}

message OrderRequest {
    string user_id = 1;
    float amount = 2;
}

message OrderResponse {
    string order_id = 1;
    string status = 2;
}